--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
   id 'java-gradle-plugin'
   id 'com.gradle.plugin-publish' version '1.2.1'
   id 'idea'
+  id "maven-publish"
 }
 
 idea {
@@ -20,7 +21,7 @@ repositories {
 dependencies {
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5+'
   testImplementation 'org.mockito:mockito-junit-jupiter:3.+'
-  testImplementation('org.assertj:assertj-core:3+')
+  testImplementation 'org.assertj:assertj-core:3+'
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5+'
 }
 
@@ -31,6 +32,19 @@ test {
 
 group = 'de.mdguenther.gradle'
 version = '0.0.1'
+
+publishing {
+  repositories {
+    maven {
+      name = "GitHubPackages"
+      url = uri("https://maven.pkg.github.com/maxdavidguenther/java-in-docker")
+      credentials {
+        username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+        password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+      }
+    }
+  }
+}
 
 gradlePlugin {
   website = 'https://github.com/maxdavidguenther/java-in-docker'
